<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="name">Name</string>
    <string name="password" />
    <string name="enter_password">Enter Password</string>
    <string name="password1">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="or">or</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>